--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,19 @@
         <item>AB+</item>
     </string-array>
 
-<string-array name="records_types_array">
-    <item>صورة اشعة</item>
-    <item>نتيجة فحص</item>
-    <item>تقرير طبي</item>
+    <string-array name="records_types_array">
+        <item>صورة اشعة</item>
+        <item>نتيجة فحص</item>
+        <item>تقرير طبي</item>
 
-</string-array>
+    </string-array>
+
+
+    <string-array name="genders">
+        <item> ذكر </item>
+        <item> انثى </item>
+
+    </string-array>
     <string name="otp"><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
     <string name="otp1"><![CDATA[<font color="#a3a3a3">ادخل الرمز الذي ارسل الى </font> <font color="#000000">+962781234567</font>]]></string>
     <!-- TODO: Remove or change this placeholder text -->
