--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,23 @@
         <item> انثى </item>
 
     </string-array>
+
+    <string-array name="cities">
+        <item>عمان</item>
+        <item>الزرقا</item>
+        <item>اربد</item>
+        <item>مادبا</item>
+        <item>جرش</item>
+        <item>البلقاء</item>
+        <item>المفرق</item>
+        <item>عجلون</item>
+        <item>العقبة</item>
+        <item>معان</item>
+        <item>الطفيلة</item>
+        <item>الكرك</item>
+
+
+    </string-array>
     <string name="otp"><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
     <string name="otp1"><![CDATA[<font color="#a3a3a3">ادخل الرمز الذي ارسل الى </font> <font color="#000000">+962781234567</font>]]></string>
     <!-- TODO: Remove or change this placeholder text -->
